[gd_scene load_steps=9 format=2]

[ext_resource path="res://885aaa030efc9ed87a6d5347f8df1772.png" type="Texture" id=1]
[ext_resource path="res://unnamed.jpg" type="Texture" id=2]
[ext_resource path="res://comencem2.png" type="Texture" id=3]
[ext_resource path="res://surt.png" type="Texture" id=4]
[ext_resource path="res://comencem.png" type="Texture" id=5]
[ext_resource path="res://97a8fc92091eda93778ce0c0c0041a6b.png" type="Texture" id=6]
[ext_resource path="res://Pantalla d'inici.gd" type="Script" id=7]
[ext_resource path="res://surt2.png" type="Texture" id=8]

[node name="Pantalla d\'inici" type="Node"]
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_left = 0.00208333
anchor_top = 0.0037037
anchor_right = 1.00208
anchor_bottom = 1.0037
margin_left = 104.0
margin_top = 100.0
margin_right = -96.0
margin_bottom = -30.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 515.0
margin_right = 1203.0
margin_bottom = 949.0
size_flags_horizontal = 4
custom_constants/separation = 50
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="MarginContainer/VBoxContainer"]
modulate = Color( 0.129412, 0.12549, 0.12549, 1 )
margin_right = 688.0
margin_bottom = 103.0
texture = ExtResource( 1 )

[node name="TextureRect2" type="TextureRect" parent="MarginContainer/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 153.0
margin_right = 688.0
margin_bottom = 153.0
texture = ExtResource( 6 )
expand = true
stretch_mode = 4

[node name="MarginContainer2" type="MarginContainer" parent="."]
margin_left = 960.0
margin_top = 512.0
margin_right = -750.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
margin_bottom = 100.0
custom_constants/separation = 100

[node name="TextureButton" type="TextureButton" parent="MarginContainer2/VBoxContainer"]
action_mode = 0
texture_normal = ExtResource( 5 )
texture_focused = ExtResource( 3 )
expand = true
stretch_mode = 3

[node name="TextureButton3" type="TextureButton" parent="MarginContainer2/VBoxContainer"]
margin_top = 100.0
margin_bottom = 100.0
texture_normal = ExtResource( 4 )
texture_focused = ExtResource( 8 )
expand = true
stretch_mode = 3
[connection signal="pressed" from="MarginContainer2/VBoxContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="MarginContainer2/VBoxContainer/TextureButton3" to="." method="_on_TextureButton3_pressed"]
